[trust-anchor] update to junit-jupiter