@@ -1,6 +1,6 @@
 package stubidp.eidas.trustanchor;
 
-import com.google.common.collect.ImmutableList;
+import certificates.values.CACertificates;
 import com.google.common.collect.ImmutableSet;
 import com.nimbusds.jose.jwk.Curve;
 import com.nimbusds.jose.jwk.ECKey;
@@ -8,30 +8,34 @@ import com.nimbusds.jose.jwk.RSAKey;
 import com.nimbusds.jose.util.Base64;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import stubidp.eidas.trustanchor.CertificateValidator;
-import stubidp.eidas.trustanchor.CountryTrustAnchorValidator;
-import stubidp.eidas.trustanchor.ECKeyHelper;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import stubidp.utils.security.security.X509CertificateFactory;
 
-import java.math.BigInteger;
+import java.security.cert.X509Certificate;
 import java.security.interfaces.ECPublicKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.Collection;
+import java.util.List;
 
 import static com.nimbusds.jose.JWSAlgorithm.RS256;
 import static com.nimbusds.jose.jwk.KeyOperation.VERIFY;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 public class CountryTrustAnchorValidatorTest {
 
-    private CertificateValidator mockValidator = mock(CertificateValidator.class);
-    private final CountryTrustAnchorValidator testValidator = new CountryTrustAnchorValidator(mockValidator);
+    @Mock
+    private CertificateValidator mockValidator;
+
+    private CountryTrustAnchorValidator testValidator;
 
     @BeforeEach
     public void setup() {
-        when(mockValidator.checkCertificateValidity(any(), any())).thenReturn(ImmutableList.of());
+        testValidator = new CountryTrustAnchorValidator(mockValidator);
     }
 
     @Test
@@ -47,7 +51,7 @@ public class CountryTrustAnchorValidatorTest {
         ECKey validTrustAnchor = getValidECTrustAnchor(Curve.P_256);
         Collection<String> errors = testValidator.findErrors(validTrustAnchor);
 
-        assertThat(errors).isEmpty();
+        assertThat(errors).containsOnlyOnce("Expecting at least one X.509 certificate");
     }
 
     @Test
@@ -55,7 +59,7 @@ public class CountryTrustAnchorValidatorTest {
         ECKey validTrustAnchor = getValidECTrustAnchor(Curve.P_384);
         Collection<String> errors = testValidator.findErrors(validTrustAnchor);
 
-        assertThat(errors).isEmpty();
+        assertThat(errors).containsOnlyOnce("Expecting at least one X.509 certificate");
     }
 
     @Test
@@ -63,19 +67,21 @@ public class CountryTrustAnchorValidatorTest {
         ECKey validTrustAnchor = getValidECTrustAnchor(Curve.P_521);
         Collection<String> errors = testValidator.findErrors(validTrustAnchor);
 
-        assertThat(errors).isEmpty();
+        assertThat(errors).containsOnlyOnce("Expecting at least one X.509 certificate");
     }
 
     private RSAKey getValidRSATrustAnchor() {
-        RSAPublicKey mockPublicKey = mock(RSAPublicKey.class);
-        BigInteger value = BigInteger.valueOf(2).pow(512);
+        final String countryPublicCert = CACertificates.TEST_ROOT_CA
+                .replace("-----BEGIN CERTIFICATE-----\n", "")
+                .replace("\n-----END CERTIFICATE-----", "")
+                .replace("\n", "")
+                .trim();
+        X509Certificate x509Certificate = new X509CertificateFactory().createCertificate(countryPublicCert);
+        RSAPublicKey rsaPublicKey = (RSAPublicKey) x509Certificate.getPublicKey();
 
-        when(mockPublicKey.getModulus()).thenReturn(value);
-        when(mockPublicKey.getPublicExponent()).thenReturn(BigInteger.valueOf(512));
-
-        return new RSAKey.Builder(mockPublicKey)
+        return new RSAKey.Builder(rsaPublicKey)
                 .keyID("TestId")
-                .x509CertChain(ImmutableList.of(mock(Base64.class)))
+                .x509CertChain(List.of(new Base64(countryPublicCert)))
                 .algorithm(RS256)
                 .keyOperations(ImmutableSet.of(VERIFY))
                 .build();
@@ -88,7 +94,7 @@ public class CountryTrustAnchorValidatorTest {
 
         return new ECKey.Builder(curve, publicKey)
                 .keyID("TestId")
-                .x509CertChain(ImmutableList.of(mock(Base64.class)))
+                .x509CertChain(null)
                 .algorithm(ECKeyHelper.getJWSAlgorithm(curve))
                 .keyOperations(ImmutableSet.of(VERIFY))
                 .build();
